# oxiDRAFT

./: .git-blame-ignore-revs  .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/oxidraft_app/: Cargo.toml  build.rs
apps/oxidraft_app/assets/: PACKAGING.md  oxidraft.desktop
apps/oxidraft_app/src/: main.rs
crates/oxidraft_boolean/: Cargo.toml
crates/oxidraft_boolean/benches/: booleans.rs
crates/oxidraft_boolean/src/: boolean_ops.rs  clip.rs  curved.rs  lib.rs  region.rs  weld.rs
crates/oxidraft_boolean/tests/: hostile_input.rs  prop_invariants.rs  spec_behavior.rs
crates/oxidraft_cad/: Cargo.toml
crates/oxidraft_cad/src/: constrain.rs  draw.rs  edit.rs  grips.rs  hatch.rs  infer.rs  inquiry.rs  lib.rs  selection.rs  snap.rs
crates/oxidraft_cad/tests/: constraint_validation.rs  hostile_tools.rs  new_constraints.rs
crates/oxidraft_constraint/: Cargo.toml
crates/oxidraft_constraint/src/: dual.rs  lib.rs
crates/oxidraft_constraint/tests/: prop_solver.proptest-regressions  prop_solver.rs
crates/oxidraft_document/: Cargo.toml
crates/oxidraft_document/src/: constraint.rs  dimension.rs  document.rs  entity.rs  layer.rs  lib.rs  properties.rs
crates/oxidraft_geometry/: Cargo.toml
crates/oxidraft_geometry/benches/: kernel.rs
crates/oxidraft_geometry/src/: curve.rs  error.rs  lib.rs  nurbs.rs  point.rs  transform.rs  util.rs
crates/oxidraft_geometry/src/ops/: blend.rs  curvature.rs  distance.rs  intersect.rs  mod.rs  offset.rs  split_reverse.rs  tangent.rs  winding.rs
crates/oxidraft_geometry/src/primitives/: circular_arc.rs  cubic_bezier.rs  elliptical_arc.rs  line_seg.rs  mod.rs  polycurve.rs
crates/oxidraft_geometry/tests/: hostile_ops.rs  prop_kernel.rs  review_probes.rs  spec_behavior.rs
crates/oxidraft_io/: Cargo.toml
crates/oxidraft_io/src/: dim.rs  dxf.rs  lib.rs  native.rs  pdf.rs  svg.rs
crates/oxidraft_io/tests/: corrupt_input.rs  prop_loaders.rs  review_probes.rs
crates/oxidraft_spatial/: Cargo.toml
crates/oxidraft_spatial/src/: lib.rs  morton.rs  quadtree.rs
crates/oxidraft_spatial/tests/: hostile_input.rs  spec_behavior.rs
crates/oxidraft_ui/: Cargo.toml
crates/oxidraft_ui/assets/icons/: icons.ai
crates/oxidraft_ui/assets/logotype/: oxidraft_logotype.ai  oxidraft_symbol.ai
crates/oxidraft_ui/examples/: gen_app_icon.rs
crates/oxidraft_ui/src/: autosave.rs  command.rs  fonts.rs  history.rs  icons.rs  lib.rs  state.rs  theme.rs  tools.rs  view.rs  view_transform.rs
crates/oxidraft_ui/src/state/: contextual.rs  modify.rs
crates/oxidraft_ui/src/view/: chrome.rs  overlays.rs  palette.rs  radial.rs  render.rs  tessellate.rs
crates/oxidraft_ui/tests/: command_toast.rs  modify_tools.rs  plot_dialog.rs  radial_menu.rs  review_probes.rs  text_focus.rs
scripts/: codesign-windows.ps1
