[package]
name = "oxidraft_app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "oxidraft"
path = "src/main.rs"

[dependencies]
oxidraft_geometry.workspace = true
oxidraft_ui.workspace = true
eframe = { workspace = true, features = ["persistence"] }

[target.'cfg(windows)'.build-dependencies]
winresource.workspace = true

[lints]
workspace = true
