[package]
name = "oxidraft_boolean"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
oxidraft_geometry.workspace = true
robust.workspace = true
rayon.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "booleans"
harness = false

[lints]
workspace = true
